allow defining of status while adding task, allow creation of users
