# server/common/src/main/java/de/tum/cit/aet/closed/ai/dto/AddTaskDto.java
@@ -1,7 +1,10 @@
 package de.tum.cit.aet.closed.ai.dto;
 
+import de.tum.cit.aet.closed.ai.model.TaskStatus;
+
 public record AddTaskDto(
         String title,
-        String description
+        String description,
+        TaskStatus taskStatus
 ) {
 }
